--- a/conf.ini
+++ b/conf.ini
@@ -1,25 +1,34 @@
 [common]
 
 # INDIQUER UN TITRE (Exemple : INFORMATION, ALERTE, IMPORTANT...)
-title = "Alerte de sécurité importante"
+title = INFORMATION
 # INDIQUER UN SOUS-TITRE (Exemple: Perturbation des accès mails, Mise à jour applicative...)
-subtile = "Changement de mot de passe recommandé"
+subtile = blablabla
 # INDIQUER LE CORPS DU MESSAGE (Le retour à la ligne est pris en compte, par exemple, si vous passez une ligne, une ligne sera passée dans le popup)
-message = "Notre système de sécurité a detecté que votre mot de passe de session Windows est répertorié dans la base de données Have I Been Pwned, un service qui identifie les mots de passe affectés par des fuites de données sur Internet.
-
-Nous vous recommandons vivement de prendre des mesures préventives pour sécuriser votre compte en modifiant votre mot de passe en respectant les recommandations disponibles en cliquant <a href="https://www.cybermalveillance.gouv.fr/medias/2019/11/Fiche-pratique_mots-de-passe.pdf">sur le lien suivant</a>.
-
-La sécurité de vos données est notre priorité, et nous mettons en œuvre des mesures pour renforcer la protection de votre compte.
-
-Si vous avez des questions, n'hésitez pas à nous contacter.
-
-Cordialement,"
+message = "blablabla
+    blablabla
+    blablabla
+    
+    blablalba
+    
+    Cordialement,"
 # INDIQUER LE SIGNATAIRE DU MESSAGE (Exemple La DSI, La DRH...)
-signature = "La Direction des Systèmes d'Informations"
-# INDIQUER LE LIEN D'UN LOGO D'ENTREPRISE
-logo_link = "https://srvwapt.mydomain.lan/wapt/logo.jpg"
+signature = La Direction des Systèmes d'informations
+# INDIQUER LE LIEN D'UN LOGO
+logo_link = https://srvwapt.mydomain.lan/wapt/logo.jpg
 
 # INDIQUER UNE DATE DE DEPART DU POPUP, Mettre une date passée pour afficher tout de suite
-popup_start_time = "2022-11-15T17:00:00"
+popup_start_time = 2022-11-15T17:00:00
 # INDIQUER UNE DATE DE FIN DU POPUP
-popup_end_time = "2024-11-15T14:00:00"
+popup_end_time = 2025-11-15T14:00:00
+
+# Nom de la tâche planifiée
+task_name = WAPT-popup
+# Activer la tâche planifiée
+task_enabled = True
+# Afficher le popup directement après installation
+popup_directly = True
+# Afficher le popup après la connexion
+popup_at_logon = True
+# Afficher le popup après déverouillage
+popup_after_unlock_session = True
