--- a/conf.ini
+++ b/conf.ini
@@ -41,3 +41,6 @@ popup_at_logon = True
 
 # Afficher le popup après déverouillage
 popup_after_unlock_session = True
+
+# objectSid du groupe pour qui le popup doit être affiché
+group_objectSid_filter = S-1-5-21-xxxxxxxxxx-xxxxxxxxx-xxxxxxxxxx-xxx
