--- a/conf.ini
+++ b/conf.ini
@@ -1,4 +1,4 @@
-[common]
+[message]
 
 # INDIQUER UN TITRE (Exemple : INFORMATION, ALERTE, IMPORTANT...)
 title = INFORMATION
@@ -21,6 +21,7 @@ signature = La Direction des Systèmes d'informations
 # INDIQUER LE LIEN D'UN LOGO
 logo_link = https://srvwapt.mydomain.lan/wapt/logo.jpg
 
+[task]
 # INDIQUER UNE DATE DE DEPART DU POPUP, Mettre une date passée pour afficher tout de suite
 popup_start_time = 2022-11-15T17:00:00
 
