--- a/conf.ini
+++ b/conf.ini
@@ -22,25 +22,25 @@ signature = La Direction des Systèmes d'informations
 logo_link = https://srvwapt.mydomain.lan/wapt/logo.jpg
 
 [task]
-# INDIQUER UNE DATE DE DEPART DU POPUP, Mettre une date passée pour afficher tout de suite
+#  Start date for popup
 popup_start_time = 2022-11-15T17:00:00
 
-# INDIQUER UNE DATE DE FIN DU POPUP
+# End date for popup
 popup_end_time = 2025-11-15T14:00:00
 
-# Nom de la tâche planifiée
+# Task Name in Windows Tasks Scheduler
 task_name = WAPT-popup
 
-# Activer la tâche planifiée
+# Enabld Task
 task_enabled = True
 
-# Afficher le popup directement après installation
+# Launch popup directly after installation
 popup_directly = True
 
-# Afficher le popup après la connexion
+# Launch popup at logon
 popup_at_logon = True
 
-# Afficher le popup après déverouillage
+# Launch popup after unlock session
 popup_after_unlock_session = True
 
 # objectSid du groupe pour qui le popup doit être affiché
